# video-clip

./: .gitignore  README.md  build_portable.ps1  components.json  detect_params.py  gui.py  index.html  main.py  package-lock.json  package.json  process_videos.py  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: 操作说明.md
scripts/: check_old.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/batch/: db.rs  ffmpeg.rs  mod.rs  scanner.rs
src/assets/: index.css
