[package]
name = "video-batch-processor"
version = "0.4.0"
description = "视频批量处理器"
authors = []
license = ""
repository = ""
default-run = "video-batch-processor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "video_batch_processor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
md-5 = "0.10"
log = "0.4"
tokio = { version = "1", features = ["process", "sync", "rt", "time"] }

[[bin]]
name = "video-batch-processor"
path = "src/main.rs"
